--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,34 +5,38 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:screenOrientation="portrait"
+    android:background="#ffffff"
     tools:context=".MainActivity">
 
     <Button
         android:id="@+id/setBoundsBtn"
-        android:layout_width="125dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_alignParentBottom="true"
         android:layout_above="@id/addEquationBtn"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="30dp"
         android:text="Set Bounds" />
 
     <Button
         android:id="@+id/addEquationBtn"
-        android:layout_width="wrap_content"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
         android:layout_above="@id/generateGraphsBtn"
+        android:layout_alignParentRight="true"
         android:clickable="true"
+        android:layout_marginRight="10dp"
+        android:padding="10dp"
         android:text="Add Equation" />
 
     <Button
         android:id="@+id/generateGraphsBtn"
-        android:layout_width="wrap_content"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
-        android:text="Generate Graphs"
-        android:clickable="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"/>
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="10dp"
+        android:clickable="true"
+        android:text="Generate Graphs" />
 
     <TextView
         android:id="@+id/xDomainTextView"
