--- a/app/src/main/res/layout/equation_listview_details.xml
+++ b/app/src/main/res/layout/equation_listview_details.xml
@@ -1,32 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:screenOrientation="portrait" android:descendantFocusability="blocksDescendants">
-
 
     <Button
         android:id="@+id/colorChangeBtn"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="14dp"
+        android:layout_marginTop="19dp"
+        android:layout_marginRight="5dp"
+        android:layout_toLeftOf="@id/deleteButton"
         android:background="@drawable/button_bg_round"
         android:padding="5dp" />
 
     <TextView
         android:id="@+id/equationTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="290dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="17dp"
-        android:layout_marginBottom="17dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:layout_toRightOf="@id/visibilityCheck"
-        android:text="Equation"
-        android:textSize="25sp"
         android:focusable="false"
-        android:focusableInTouchMode="false"/>
+        android:focusableInTouchMode="false"
+        android:text="Equation"
+        android:textSize="20sp" />
 
     <CheckBox
         android:id="@+id/visibilityCheck"
@@ -39,5 +39,19 @@
         android:layout_marginLeft="8dp"
         android:layout_marginTop="19dp"
         android:checked="true" />
+
+    <Button
+        android:id="@+id/deleteButton"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="17dp"
+        android:layout_marginRight="5dp"
+        android:background="@android:color/transparent"
+        android:minWidth="0dp"
+        android:minHeight="0dp"
+        android:text="X"
+        android:textColor="#D51010"
+        android:textSize="25dp" />
 
 </RelativeLayout>
